# ImageDatabase

./: .gitignore  CMakeLists.txt  ImageDatabase.sln  LICENSE  README.md
ImageDatabase/: Algorithm.h  Algorithm.hpp  Arguments.cpp  Arguments.h  Bit.h  Compression.h  Convert.h  Cryptography.cpp  Cryptography.h  Enumerable.h  File.cpp  File.h  Function.h  ImageDatabase.h  ImageDatabase.hpp  ImageDatabase.vcxproj  ImageDatabase.vcxproj.filters  Log.cpp  Log.h  OpenCvUtility.cpp  OpenCvUtility.h  Requires.h  Serialization.h  Serialization.hpp  StdIO.h  String.h  Thread.h  Time.h  main.cpp  vgg16-deploy.prototxt
